# pure_pursuit

./: CMakeLists.txt  package.xml
config/: pure_pursuit_params.yaml
include/pure_pursuit/: pure_pursuit_function.hpp
launch/: pure_pursuit_with_logger.launch
results/: track_log.csv
src/: path_recorder.cpp  pure_pursuit.cpp  pure_pursuit_function.cpp
