<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>0.0.1</version>
  <description>Pure Pursuit Controller with Path Recorder for MORAI SIM</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>morai_msgs</depend>
  <depend>geodesy</depend>
  <depend>geographic_msgs</depend>

  <exec_depend>roslaunch</exec_depend>
</package>

